<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:minWidth="1000dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingTop="20sp"
        android:text="@string/descargass"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:paddingTop="20dp"
        android:text="Introducción FIWARE"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/link2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:clickable="true"
        android:layout_marginLeft="7dp"
        android:text="@string/link3" />
    
    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="Respuestas Cursos"
        android:layout_marginLeft="7dp"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/link3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:layout_marginLeft="7dp"
        android:clickable="true"
        android:text="@string/link2" />
     

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginLeft="7dp"
        android:text="Kurento FIWARE"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:clickable="true"
        android:layout_marginLeft="7dp"
        android:text="@string/link" />
    
   
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
      android:paddingBottom="7dp"
      android:paddingLeft="7dp"
      android:paddingRight="7dp"
      android:paddingTop="7dp" >

        <Button
            android:id="@+id/bvolver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/shapevolver" />
    </RelativeLayout>

</LinearLayout>