<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="comic-sans"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/ganador"
        android:paddingTop="20sp"
        android:textSize="33sp"
        android:textStyle="bold|italic" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dip"
        android:fontFamily="comic-sans"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/detallepartida"
        android:paddingTop="20sp"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TableRow
        android:id="@+id/PuntuacionRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp" >

        <TextView
            android:id="@+id/PuntuacionNombre"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        android:textColor="@color/white"
            android:text="@string/puntuacion"
        	 />

        <TextView
            android:id="@+id/PuntuacionMostrar"
            android:layout_width="0dip"
        android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
        android:layout_marginBottom="30dip"
        android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/NombreRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp" >

        <TextView
            android:id="@+id/NombreNombre"
            android:layout_width="0dip"
        android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
        	 />

        <TextView
            android:id="@+id/NombreMostrar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
        android:textColor="@color/white"
        android:layout_marginBottom="30dip"
        android:textSize="20sp"/>
        
    </TableRow>

    <TableRow
        android:id="@+id/ApellidosRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp" >

        <TextView
            android:id="@+id/ApellidosNombre"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
        android:textColor="@color/white"
            android:text="@string/apellidos"
        	 />

        <TextView
            android:id="@+id/ApellidosMostrar"
            android:layout_width="0dip"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        android:textColor="@color/white"
        android:layout_marginBottom="80dip"
         />
        
    </TableRow>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom" 
      android:paddingBottom="7dp"
      android:paddingLeft="7dp"
      android:paddingRight="7dp"
      android:paddingTop="7dp">
    
    <Button
        android:id="@+id/volver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:textAlignment="center"
        android:background="@drawable/shapevolver"
        android:textColor="@color/white" />

</RelativeLayout>
</TableLayout>