<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black" >
   
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#01DF01"
                android:gravity="center"
                android:text="@string/activas"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <ListView
                android:id="@+id/list1"
                android:layout_width="fill_parent"
                android:layout_height="89dp"
                android:textAlignment="center"
                android:background="#2E2E2E"
            android:divider="@color/white"
			android:dividerHeight="1dp"
                android:textColor="@color/white" 
       			android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
                android:scrollbars="vertical"/>

            <TextView
                android:id="@+id/textViewHeader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0174DF"
                android:gravity="center"
                android:text="@string/pendientes"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ListView
                android:id="@+id/list2"
                android:layout_width="fill_parent"
                android:layout_height="89dp"
                android:layout_weight="0.67"
            android:divider="@color/white"
			android:dividerHeight="1dp"
       		android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
                android:background="#2E2E2E"
                android:textColor="@color/white"  
                android:scrollbars="vertical"/>

         

            <TextView
                android:id="@+id/textViewHeader3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF0040"
                android:gravity="center"
                android:text="@string/terminadas"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ListView
                android:id="@+id/list3"
                android:layout_width="fill_parent"
                android:layout_height="89dp"
                android:layout_weight="0.55"
            android:divider="@color/white"
			android:dividerHeight="1dp"
       		android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
                android:background="#2E2E2E"
                android:textColor="@color/white"  
                android:scrollbars="vertical"/>

        </LinearLayout>

          </ScrollView>
       
        <Button
            android:id="@+id/bvolver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/shapevolver"
            android:text="@string/volver"
            android:textColor="@color/white" />

</RelativeLayout>